[gd_scene load_steps=5 format=3 uid="uid://db4afm8ddc4mj"]

[ext_resource type="PackedScene" uid="uid://23tudly0fen6" path="res://Menus/Options Menu/Input Buttons/input_button.tscn" id="1_8hlna"]
[ext_resource type="Script" uid="uid://da4sn0puupljn" path="res://Menus/Options Menu/Input Buttons/input_settings_v_2.gd" id="1_k7dqp"]
[ext_resource type="Theme" uid="uid://c22yuxt1uopm0" path="res://Themes/Default_keybinding.tres" id="1_xw3oe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sunam"]
bg_color = Color(0, 0, 0, 0.490196)

[node name="InputSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xw3oe")
script = ExtResource("1_k7dqp")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -50.0
offset_right = 355.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_sunam")

[node name="ActionList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InputButton" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("1_8hlna")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 18)
layout_mode = 2
theme = ExtResource("1_xw3oe")

[node name="ResetButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 18)
layout_mode = 2
focus_mode = 0
text = "Reset to Default"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
